exports[`LabelWidget should apply any label props to the label element 1`] = `
<label
  className="test"
  htmlFor="test">
  Test
</label>
`;

exports[`LabelWidget should render a single label widget correctly 1`] = `
<label>
  Test
</label>
`;

exports[`LabelWidget should throw an error if there are no children 1`] = `
"Warning: Failed prop type: The prop \`children\` is marked as required in \`Label\`, but its value is \`undefined\`.
    in Label"
`;
